# 提交审核分支

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <!-- SEO -->
-  <title>MasterXiao AI - 智能命理匹配分析平台</title>
-  <meta name="description" content="MasterXiao AI 提供感情匹配、职场关系、城市发展等多维度命理分析服务，通过八字三柱和六爻塔罗为你指引前路。">
-  <meta name="keywords" content="感情匹配,职场关系,塔罗牌,命理分析,八字匹配,城市匹配,六爻占卜">
+  <title>趣测小站 - 趣味性格测试平台</title>
+  <meta name="description" content="趣测小站提供感情匹配、职场关系、城市发展等多维度趣味性格测试服务，帮你了解人际关系契合度，仅供娱乐参考。">
+  <meta name="keywords" content="感情匹配,职场关系,性格测试,趣味分析,契合度测试,城市匹配,人际关系,娱乐测试">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="MasterXiao AI - 智能命理匹配分析">
-  <meta property="og:description" content="发现你的命运连接，让星辰为你指引前路。">
+  <meta property="og:title" content="趣测小站 - 趣味性格测试">
+  <meta property="og:description" content="发现你的性格契合度，探索人际关系的奥秘。仅供娱乐参考。">
   <meta property="og:type" content="website">
   <meta property="og:image" content="/og-image.jpg">
 
@@ -35,8 +35,8 @@
     <!-- 加载状态 -->
     <div class="loading-screen">
       <div class="loading-content">
-        <div class="loading-icon">🔮</div>
-        <div class="loading-text">MasterXiao AI</div>
+        <div class="loading-icon">✨</div>
+        <div class="loading-text">趣测小站</div>
         <div class="loading-dots">
           <span></span>
           <span></span>
