# 网站名称修改成"匹配游戏" # 日志增加时间

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <!-- SEO -->
-  <title>趣测小站 - 趣味性格测试平台</title>
-  <meta name="description" content="趣测小站提供感情匹配、职场关系、城市发展等多维度趣味性格测试服务，帮你了解人际关系契合度，仅供娱乐参考。">
+  <title>匹配游戏 - 趣味性格测试平台</title>
+  <meta name="description" content="匹配游戏提供感情匹配、职场关系、城市发展等多维度趣味性格测试服务，帮你了解人际关系契合度，仅供娱乐参考。">
   <meta name="keywords" content="感情匹配,职场关系,性格测试,趣味分析,契合度测试,城市匹配,人际关系,娱乐测试">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="趣测小站 - 趣味性格测试">
+  <meta property="og:title" content="匹配游戏 - 趣味性格测试">
   <meta property="og:description" content="发现你的性格契合度，探索人际关系的奥秘。仅供娱乐参考。">
   <meta property="og:type" content="website">
   <meta property="og:image" content="/og-image.jpg">
@@ -36,7 +36,7 @@
     <div class="loading-screen">
       <div class="loading-content">
         <div class="loading-icon">✨</div>
-        <div class="loading-text">趣测小站</div>
+        <div class="loading-text">匹配游戏</div>
         <div class="loading-dots">
           <span></span>
           <span></span>
