# 后台管理员(登录，权限)相关功能

--- a/web/backend/index.html
+++ b/web/backend/index.html
@@ -18,67 +18,8 @@
                 <h2>匹配游戏</h2>
             </div>
             <nav class="sidebar-nav">
-                <ul class="nav-menu">
-                    <li class="nav-item">
-                        <a href="#dashboard" class="nav-link active" data-page="dashboard">
-                            <span class="nav-icon">📊</span>
-                            <span class="nav-text">仪表盘</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#users" class="nav-link" data-page="users">
-                            <span class="nav-icon">👥</span>
-                            <span class="nav-text">人员管理</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#orders" class="nav-link" data-page="orders">
-                            <span class="nav-icon">📋</span>
-                            <span class="nav-text">订单管理</span>
-                        </a>
-                    </li>
-                    <li class="nav-item has-submenu">
-                        <a href="#info" class="nav-link" data-page="info">
-                            <span class="nav-icon">📁</span>
-                            <span class="nav-text">信息管理</span>
-                            <span class="submenu-arrow">▼</span>
-                        </a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="#birthday-match" class="nav-link" data-page="birthday-match">
-                                    <span class="nav-icon">🎂</span>
-                                    <span class="nav-text">生日匹配</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#card-match" class="nav-link" data-page="card-match">
-                                    <span class="nav-icon">🃏</span>
-                                    <span class="nav-text">卡牌匹配</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item has-submenu">
-                        <a href="#statistics" class="nav-link" data-page="statistics">
-                            <span class="nav-icon">📊</span>
-                            <span class="nav-text">数据统计</span>
-                            <span class="submenu-arrow">▼</span>
-                        </a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="#user-stats" class="nav-link" data-page="user-stats">
-                                    <span class="nav-icon">👥</span>
-                                    <span class="nav-text">用户统计</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#match-stats" class="nav-link" data-page="match-stats">
-                                    <span class="nav-icon">📈</span>
-                                    <span class="nav-text">信息统计</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
+                <ul class="nav-menu" id="navMenu">
+                    <!-- 菜单将通过JS动态生成 -->
                 </ul>
             </nav>
         </aside>
